--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -3,7 +3,7 @@
   <div id="buscador">
     <form action="/action_page.php">
       <input type="text" placeholder="Buscar..." name="buscar">
-      <button type="submit"><i class="fa fa-search"></i></button>
+      <button type="submit"></button>
     </form>
   </div>
 </div>
