top-bar first commit

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,8 +2,8 @@
   <div id="logo"><img width="300" alt="" src='../assets/logo.PNG'></div>
   <div id="buscador">
     <form action="/action_page.php">
-      <input type="text" placeholder="Buscar..." name="buscar">
-      <button type="submit"></button>
+      <input type="text" placeholder="Buscar..." name="nombre">
+      <button type="submit"><img class="botonBuscar" src="../../assets/buscar.png" alt=""></button>
     </form>
   </div>
 </div>
