reestructuracion src/app lower-bar

--- a/src/app/common/top-bar/top-bar.component.html
+++ b/src/app/common/top-bar/top-bar.component.html
@@ -3,7 +3,7 @@
   <div id="buscador">
     <form action="/action_page.php">
       <input type="text" placeholder="Buscar..." name="nombre">
-      <button type="submit"><img class="botonBuscar" src="../../assets/buscar.png" alt=""></button>
+      <button type="submit"><img class="botonBuscar" src="../../../assets/buscar.png" alt=""></button>
     </form>
   </div>
 </div>
